force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/SBQQ__ConfigurationAttributes__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfigurationAttributes__c</fullName>
        <label>Configuration Attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>