force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>Favorite_Product</relationshipName>
        <type>Lookup</type>
    </CustomField>