force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/SBQQ__Favorite__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Favorite__c</fullName>
        <label>Favorite</label>
        <referenceTo>SBQQ__Favorite__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>