force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <type>Lookup</type>
    </CustomField>