force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/SBQQ__RequiredBy__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>SBQQ__FavoriteProduct__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <type>Lookup</type>
    </CustomField>